[workspace]

members = [
    "library",
    "shared-library-builder/library",
    "shared-library-builder/builder",
]

exclude = [ "target" ]

[patch.crates-io]
winit = { git = "https://github.com/syrel/winit", rev = "8cc067d81cf48c7131a992125b46252490813618" }

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true

[profile.release]
opt-level = 3